# herero-dataset

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
data/samples/: README.md  wikipedia_hz_sample.jsonl
docs/: CHANGELOG.md  DATA_CARD.md
docs/legal/: LICENSE_ATTRIBUTION.md  LICENSE_VERIFICATION.md
docs/sources/: herero_bible_1849.md  storybooks_namibia.md  wikipedia_hz.md
huggingface_dataset/: LICENSE  README.md  dataset_info.json  dataset_stats.json  sources.csv
huggingface_dataset/data/: test.jsonl  validation.jsonl
iterations/iteration_001_wikipedia_hz/: NOTES.md  stats.json
iterations/iteration_002_herero_bible/: NOTES.md  stats.json
iterations/iteration_005_storybooks_namibia/: NOTES.md  stats.json
iterations/iteration_007_omnilingual/: NOTES.md  stats.json
iterations/iteration_008_glotcc/: NOTES.md  stats.json
iterations/iteration_010_fineweb2/: NOTES.md
iterations/iteration_011_finepdfs/: NOTES.md
scripts/: create_hf_dataset.py
scripts/processing/: __init__.py  create_versions.py  curate_dataset.py
scripts/scrapers/finepdfs/: __init__.py  process_finepdfs.py
scripts/scrapers/fineweb2/: __init__.py  process_fineweb2.py
scripts/scrapers/glotcc/: process_glotcc.py
scripts/scrapers/herero_bible/: __init__.py  process_bible.py
scripts/scrapers/omnilingual/: process_parquet.py
scripts/scrapers/storybooks_namibia/: __init__.py  scraper.py
scripts/scrapers/wikipedia_hz/: __init__.py  config.py  (+2 more)
tests/: test_dataset.py  test_hf_dataset.py
