[project]
name = "herero-dataset"
version = "1.0.0"
description = "A multi-license Herero (Otjiherero) language dataset for NLP research"
readme = "README.md"
requires-python = ">=3.10"
# Code is MIT licensed; data is multi-license (see huggingface_dataset/LICENSE)
license = {text = "MIT"}
authors = [
    {name = "Noé Flandre", email = "noe@example.com"}
]
keywords = ["herero", "otjiherero", "nlp", "dataset", "low-resource", "african-languages"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
